# weather-bot

./: .gitignore  Makefile  README.md  bot.py  pyproject.toml
weather_bot/: __init__.py  bot.py
